This is a large commit. - Switched to Maven2 as the main build system - Switched to JDK 5 generics and - Replaced Doug Leas concurrent package with JDK5-concurrent
For me, 4 tests still fail. Still under investigation.

git-svn-id: https://svn.apache.org/repos/asf/commons/proper/jcs/trunk@1151575 13f79535-47bb-0310-9956-ffa450edef68